CHANGES.TXT for Ublu Midrange and Mainframe Life Cycle Extension Language
Copyright (c) 2016, Jack J. Woehr jwoehr@softwoehr.com http://www.softwoehr.com
All rights reserved.

1.1.4
-----
System
*   Debugger now handles autonomic variables

Commands
* general
	* minor fixes at Java level
* individual commands
	* outq and printer rationalized
		* outq -get -getint -getfloat -getstring
		* outq removed superflous dash-commands
		* printer -getint -getfloat -getstring
	* rs & ftp bug in close deleting tuple fixed	
	* savesys
	
Extensions
* new
	* ux.printobj.ublu
	
1.1.3 2016-10-14
System:
* Much refactoring at the Java level
* ublu.Ublu takes -include (i) switch and -silent (s) switch
* autonomic tuple variables
* save and restore const map
* ublu.util.Renderer
	* ObjectLockListEntry	

Commands:
* general
	* deprecate -instance in favor of -new
	* command descriptions cleaned up
	* some commands' argument parsing modernized
* individual commands	
	* const -list
	* db -json
	* IF now tests for null as well as not-true-not-false
	* ifs -fromfile
	* include -s (for -silent)
	* joblog command added
	* json command added
	* job -hold -release
	* lifo -true -false -null
	* msgq no longer does automatic close
	* printer -wtrjob
	* printer -get works for all attributes now
	* put pushes null correctly
	* RETURN removed (doesn't work correctly)
	* rs -json
	* string --,-string -toascii -toas400
	* system modernized
	* tuple -autonome(s)

Miscellaneous:
* Update vim mode
* ubluref.html example for FUNC corrected
* ubluref.html many minor corrections
* More guide - notes on tuple stack usage
* Update build file and welcome message

Examples:
* new
	* joblogstuff.ublu
	* test/testjson.ublu
	* test/testnum.ublu
* updated
	* all or most updated -new in place of -instance
	* dbexample.ublu
	* msgstuff.ublu
	* test/testlist.ublu
	
Extensions (extending Ublu in Ublu) in the new extensions subdir:
* ux.objectlock.ublu 
* ux.user.ublu

1.1.2
Changes to commands: